--- a/inex.html
+++ b/inex.html
@@ -6,10 +6,90 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
 	<script src="./src/scripts/app.js" async defer></script>
+	<style>
+		* {
+			margin: 0;
+			/* font-family: ; */
+		}
+
+		[id^='digit'] {
+			border-radius: 50%;
+			background-color: gold;
+			height: 50px;
+			width: 50px;
+			border: 2px solid black;
+			text-align: center;
+			padding: 24px;
+			font-size: 24px;
+			font-weight: bolder;
+		}
+
+		body {
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			flex-direction: column;
+			min-height: 100vh;
+			gap: 20px;
+
+		}
+
+		body>section {
+			display: flex;
+			gap: 20px;
+		}
+
+		[for^=digit] {
+			display: none;
+		}
+
+		#playBtn {
+			font-size: 24px;
+			padding: 10px 20px;
+			text-transform: uppercase;
+			background-color: lightseagreen;
+			border: 2px solid black;
+			border-radius: 4px;
+			cursor: pointer;
+			transition: all 400ms;
+		}
+
+		#playBtn :hover {
+			background-color: black;
+			border-color: lightskyblue;
+			color: lightskyblue;
+		}
+	</style>
 </head>
 
 <body>
-
+	<h1>Lotto</h1>
+	<section>
+		<div><label for="digit1">1.</label>
+			<input type="text" id="digit1">
+		</div>
+		<div><label for="digit2">2.</label>
+			<input type="text" id="digit2">
+		</div>
+		<div>
+			<label for="digit3">3.</label>
+			<input type="text" id="digit3">
+		</div>
+		<div>
+			<label for="digit4">4.</label>
+			<input type="text" id="digit4">
+		</div>
+		<div>
+			<label for="digit5">5.</label>
+			<input type="text" id="digit5">
+		</div>
+		<div>
+			<label for="digit6">6.</label>
+			<input type="text" id="digit6">
+		</div>
+	</section>
+	<button id="playBtn">Play</button>
+	<div class="result"></div>
 </body>
 
 </html>
