--- a/inex.html
+++ b/inex.html
@@ -9,7 +9,8 @@
 	<style>
 		* {
 			margin: 0;
-			/* font-family: ; */
+			padding: 0;
+			font-family: sans-serif;
 		}
 
 		[id^='digit'] {
@@ -39,7 +40,7 @@
 			gap: 20px;
 		}
 
-		[for^=digit] {
+		label[for^=digit] {
 			display: none;
 		}
 
@@ -54,7 +55,7 @@
 			transition: all 400ms;
 		}
 
-		#playBtn :hover {
+		#playBtn:hover {
 			background-color: black;
 			border-color: lightskyblue;
 			color: lightskyblue;
@@ -65,10 +66,12 @@
 <body>
 	<h1>Lotto</h1>
 	<section>
-		<div><label for="digit1">1.</label>
+		<div>
+			<label for="digit1">1.</label>
 			<input type="text" id="digit1">
 		</div>
-		<div><label for="digit2">2.</label>
+		<div>
+			<label for="digit2">2.</label>
 			<input type="text" id="digit2">
 		</div>
 		<div>
@@ -89,6 +92,7 @@
 		</div>
 	</section>
 	<button id="playBtn">Play</button>
+
 	<div class="result"></div>
 </body>
 
